--- a/package.json
+++ b/package.json
@@ -83,13 +83,15 @@
     "move-cli": "^1.2.1",
     "ncp": "^2.0.0",
     "ngrok": "^3.2.5",
+    "node-sass": "^4.0.0",
     "npm-run-all": "~4.1.5",
     "null-loader": "~3.0.0",
     "prettier": "^2.0.5",
+    "sass-loader": "^12.6.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
     "url-loader": "~2.1.0",
-    "webpack": "4.44.2",
+    "webpack": "^4.44.2",
     "webpack-cli": "~3.3.9"
   },
   "scripts": {
