nav link column showing

--- a/data/routes/en.yml
+++ b/data/routes/en.yml
@@ -75,4 +75,6 @@ placeholders:
               heading: Column 1
               footerNavLinksList: 
               - id: footer-column-1-link-1
+              - id: footer-column-1-link-2
+
 
