all four columns working

--- a/data/content/Footer/NavLinksColumn1/Item1/en.yml
+++ b/data/content/Footer/NavLinksColumn1/Item1/en.yml
@@ -3,5 +3,6 @@ displayName: Link 1
 # Template defines the available fields. See /sitecore/definitions/templates/Styleguide-ContentList-Template.sitecore.js
 template: Footer-NavLinks-Template
 fields:
-  label: Link 1
-  url: "www.google.com"
+  internalLink:
+    href: '/styleguide'
+    text: Link to styleguide
