--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "chokidar": "~3.1.1",
     "cross-env": "~6.0.0",
     "cross-spawn": "^7.0.3",
+    "css-loader": "^6.7.1",
     "del-cli": "^3.0.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^6.11.0",
@@ -88,6 +89,7 @@
     "prettier": "^2.0.5",
     "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
+    "style-loader": "^3.3.1",
     "url-loader": "~2.1.0",
     "webpack": "4.44.2",
     "webpack-cli": "~3.3.9"
