--- a/package.json
+++ b/package.json
@@ -84,9 +84,11 @@
     "move-cli": "^1.2.1",
     "ncp": "^2.0.0",
     "ngrok": "^3.2.5",
+    "node-sass": "^4.0.0",
     "npm-run-all": "~4.1.5",
     "null-loader": "~3.0.0",
     "prettier": "^2.0.5",
+    "sass-loader": "^12.6.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
     "style-loader": "^3.3.1",
