--- a/data/routes/en.yml
+++ b/data/routes/en.yml
@@ -20,6 +20,9 @@ fields:
 # root placeholder names are defined in the package.json config section (required for Sitecore deployment)
 placeholders:
   jss-main:
+    - componentName: Counter
+      fields: 
+        heading: This is the counter
     - componentName: ContentBlock
       fields:
         heading: Welcome to Sitecore JSS
