--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "react-dom": "^17.0.2",
     "react-helmet": "~5.2.1",
     "react-i18next": "~11.3.3",
+    "react-redux": "^8.0.0",
     "react-router-dom": "~5.1.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.1.2",
     "serialize-javascript": "~3.1.0"
   },
   "devDependencies": {
