--- a/data/routes/en.yml
+++ b/data/routes/en.yml
@@ -65,4 +65,7 @@ placeholders:
         logo: 
           src: /data/media/img/legrandav-logo.svg
           alt: LegrandAv Logo
-       
+  account-footer:
+    - componentName: AccountFooter
+      fields:
+        heading: footer test      
